# device_soc_hisilicon

./: .gitattributes  .gitignore  BUILD.gn  LICENSE  OAT.xml  README.en.md  README.md  ohos.build
common/hal/display/: BUILD.gn
common/hal/display/source/: display_config.gni
common/hal/media/: BUILD.gn  build.sh  bundle.json
common/hal/media/audio/: BUILD.gn
common/hal/middleware/: BUILD.gn  build.sh  bundle.json
common/hal/middleware/ffmpeg_adapt/: Makefile_llvm  Notes.txt  adapt_config.sh  build_ffmpeg.sh  configure  configure_llvm  disable_decoder_config.sh  library.mak
common/hi35xx_hal/display/: BUILD.gn
common/hi35xx_hal/media/: BUILD.gn  build.sh
common/platform/wifi/hi3881v100/: BUILD.gn  Makefile
hi3516dv300/: .gitattributes  BUILD.gn  NOTICE  OAT.xml  README.md  README_zh.md  soc.gni
hi3516dv300/sdk_linux/: BUILD.gn  build.sh  config.gni
hi3516dv300/sdk_linux/drv/interdrv/: Makefile
hi3516dv300/sdk_linux/drv/mpp/: Makefile  Makefile.linux.param  Makefile.param  cfg.mak  sdk.mk
hi3516dv300/sdk_linux/include/: aacdec.h  aacenc.h  audio_mp3_adp.h  autoconf.h  fisheye_calibrate.h  hi_ae_comm.h  hi_awb_comm.h  hi_buffer.h  hi_comm_3a.h  hi_comm_adec.h  hi_comm_aenc.h  hi_comm_ai.h  hi_comm_aio.h  hi_comm_ao.h  hi_comm_dis.h  hi_comm_gdc.h  hi_comm_hdmi.h  hi_comm_irq.h  hi_comm_isp.h  hi_comm_ive.h  hi_comm_rc.h  hi_comm_region.h  hi_comm_snap.h  hi_comm_sns.h  hi_comm_svp.h  hi_comm_sys.h  hi_comm_vb.h  hi_comm_venc.h  hi_comm_vgs.h  hi_comm_vi.h  hi_comm_video.h  hi_comm_vo.h  hi_common.h  hi_debug.h  hi_defines.h  hi_errno.h  hi_isp_debug.h  hi_isp_defines.h  hi_math.h  hi_md.h  (+42 more)
hi3516dv300/sdk_linux/include/adapt/: hi_comm_3a_adapt.h  hi_comm_isp_adapt.h  hi_comm_video_adapt.h  hi_common_adapt.h  hi_debug_adapt.h  hi_errno_adapt.h  hi_isp_bin_adapt.h  hi_math_adapt.h  mpi_isp_adapt.h
hi3516dv300/sdk_linux/sample/platform/: Makefile  Makefile.param
hi3516dv300/sdk_linux/sample/taurus/: README.md
hi3516dv300/sdk_linux/usr/sensor/: Makefile
hi3516dv300/sdk_liteos/: BUILD.gn  config.gni
hi3516dv300/sdk_liteos/board/: BUILD.gn  Makefile  board.c  target_config.h
hi3516dv300/sdk_liteos/board/include/: board.h
hi3516dv300/sdk_liteos/drivers/: BUILD.gn  Kconfig
hi3516dv300/sdk_liteos/hdf_config/: BUILD.gn  Makefile  hdf.hcs
hi3516dv300/sdk_liteos/hdf_config/adc/: adc_config.hcs
hi3516dv300/sdk_liteos/hdf_config/device_info/: device_info.hcs
hi3516dv300/sdk_liteos/hdf_config/dmac/: dmac_config.hcs
hi3516dv300/sdk_liteos/hdf_config/gpio/: gpio_config.hcs
hi3516dv300/sdk_liteos/hdf_config/i2c/: i2c_config.hcs
hi3516dv300/sdk_liteos/hdf_config/i2s/: i2s_config.hcs
hi3516dv300/sdk_liteos/hdf_config/input/: input_config.hcs
hi3516dv300/sdk_liteos/hdf_config/lcd/: lcd_config.hcs
hi3516dv300/sdk_liteos/hdf_config/mmc/: mmc_config.hcs
hi3516dv300/sdk_liteos/hdf_config/pin/: pin_config.hcs
hi3516dv300/sdk_liteos/hdf_config/pwm/: pwm_config.hcs
hi3516dv300/sdk_liteos/hdf_config/rtc/: rtc_config.hcs
hi3516dv300/sdk_liteos/hdf_config/spi/: spi_config.hcs
hi3516dv300/sdk_liteos/hdf_config/timer/: timer_config.hcs
hi3516dv300/sdk_liteos/hdf_config/uart/: uart_config.hcs
hi3516dv300/sdk_liteos/hdf_config/usb/: usb_config.hcs
hi3516dv300/sdk_liteos/hdf_config/watchdog/: watchdog_config.hcs
hi3516dv300/sdk_liteos/hdf_config/wifi/: wlan_chip_hi3881.hcs  wlan_platform.hcs
hi3516dv300/sdk_liteos/include/: acodec.h  autoconf.h  hi_af_comm.h  hi_comm_hdmi.h  hi_comm_isp.h  hi_comm_vb.h  hi_comm_vdec.h  hi_comm_venc.h  hi_comm_vgs.h  hi_comm_video.h  hi_comm_vo.h  hi_comm_vo_dev.h  hi_comm_vpss.h  hi_common.h  hi_common_cipher.h  hi_defines.h  hi_isp_debug.h  hi_isp_defines.h  hi_ive.h  hi_math.h  hi_mipi.h  hi_module_param.h  hi_osal.h  hi_osal_user.h  hi_resampler_api.h  hi_tde_errcode.h  hi_tde_type.h  hi_unf_cipher.h  hifb.h  mpi_ae.h  mpi_isp.h  mpi_ive.h  mpi_nnie.h  mpi_region.h  mpi_snap.h  mpi_vb.h  mpi_vgs.h  mpi_vi.h  mpi_vo.h  mpi_vpss.h  (+4 more)
hi3516dv300/sdk_liteos/include/adapt/: hi_comm_sns_adapt.h  hi_comm_video_adapt.h  hi_sns_ctrl_adapt.h
hi3516dv300/sdk_liteos/mpp/: BUILD.gn
hi3516dv300/sdk_liteos/mpp/module_init/: BUILD.gn
hi3516dv300/uboot/linux/: Makefile
hi3516dv300/uboot/liteos/: Makefile
hi3516dv300/uboot/liteos/reg/: LICENSE
hi3516dv300/uboot/liteos/secureboot_ohos/: sec_os.sh
hi3516dv300/uboot/liteos/secureboot_release/: Makefile  create_secure_boot.sh  rsa2048pem.sh  rsa4096pem.sh
hi3516dv300/uboot/prebuilts/: mkimage
hi3518ev300/mpp/module_init/: BUILD.gn
hi3518ev300/mpp/module_init/src/: system_init.c
hi3751v350/gpu/: BUILD.gn
hi3751v350/sdk_linux/: BUILD.gn  base.mak  cfg.mak
hi3751v350/sdk_linux/include/: hi_osal_user.h  hifb_adapter.h  hifb_public.h  hifb_userspace.h
hi3861v100/sdk_liteos/: BUILD.gn  NOTICE  SConstruct  bundle.json  hm_build.sh
hi3861v100/sdk_liteos/components/histreaming/: SConscript
hi3861v100/sdk_liteos/config/: system_config.h
hi3861v100/sdk_liteos/include/: hi3861_platform.h  hi_blackbox.h  hi_blackbox_adapter.h  hi_dumper.h  hi_dumper_adapter.h  hi_gpio.h
hi3861v100/sdk_liteos/platform/include/: hi_sal.h
hi3861v100/sdk_liteos/tools/nvtool/: build_nv.py
ws63v100/adapter/kal/posix/: BUILD.gn
ws63v100/sdk/: BUILD.gn  CMakeLists.txt  build.py  config.in  hm_build.sh
ws63v100/sdk/application/: CMakeLists.txt  Kconfig
ws63v100/sdk/application/samples/: CMakeLists.txt  Kconfig
ws63v100/sdk/application/ws63/: CMakeLists.txt
ws63v100/sdk/bootloader/: CMakeLists.txt
ws63v100/sdk/bootloader/flashboot_ws63/: CMakeLists.txt
ws63v100/sdk/drivers/: CMakeLists.txt  Kconfig
ws63v100/sdk/drivers/boards/: CMakeLists.txt  Kconfig
ws63v100/sdk/drivers/chips/: CMakeLists.txt  Kconfig
ws63v100/sdk/drivers/drivers/: Kconfig  (+1 more)
ws63v100/sdk/include/: CMakeLists.txt  cfbb_version.h  common_def.h  errcode.h
ws63v100/sdk/kernel/: CMakeLists.txt  Kconfig
ws63v100/sdk/middleware/: CMakeLists.txt  Kconfig
ws63v100/sdk/open_source/: CMakeLists.txt
ws63v100/sdk/protocol/: CMakeLists.txt  Kconfig
ws63v100/sdk/test/: CMakeLists.txt  Kconfig
(+3794 files in other folders)
