# Copyright (C) 2021 HiSilicon (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

#print("device_type=$device_type")
device_type = "hi3516dv300"
group("products_group") {
  if (device_type == "hi3516dv300") {
    deps = [
      "//device/hisilicon/hi3516dv300:hi3516dv300_group",
    ]
  } else if (device_type == "hi3559av100") {
    deps = [
      "//device/hisilicon/hi3559av100:hi3559av100_group",
    ]
  }

  deps += [
    "//device/hisilicon/hardware:hardware_group",
    "//device/hisilicon/modules/middleware:middleware_group",
  ]
}
