# Copyright (C) 2024 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

declare_args() {
  build_ws63_sdk_open = false
  enable_hos_vendor_wifiiot_xts = false
}

group("nearllink_sdk") {
  deps = [ ":sdk" ]
}

build_ext_component("run_sdk_build") {
  exec_path = rebase_path(".", root_build_dir)
  outdir = rebase_path(root_out_dir)
  command = "sh hm_build.sh $outdir $build_ws63_sdk_open"

  #  command = "python3 build.py -c ws63-liteos-app"
  #  if (host_os == "win") {
  #    command = "sh hm_build.sh $outdir win"
  #  } else {
  #    command = "sh hm_build.sh $outdir linux"
  #  }
  deps = [
    ":sdk",
    "//base/security/device_auth/frameworks/deviceauth_lite:hichainsdk",
    "//build/lite:ohos",
  ]
  if (enable_hos_vendor_wifiiot_xts) {
    deps += [ "//build/lite/config/subsystem/xts:xts" ]
  }
}

lite_component("sdk") {
  features = []

  deps = [
    "//build/lite/config/component/cJSON:cjson_static",
    "//device/soc/hisilicon/ws63v100/adapter/hals/communication/ble_lite",
    "//device/soc/hisilicon/ws63v100/adapter/hals/communication/sle_lite",
    "//device/soc/hisilicon/ws63v100/adapter/hals/communication/wifi_lite/wifiservice",

    #   "//device/soc/hisilicon/ws63v100/adapter/kal",
  ]
}
