# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//build/lite/ndk/ndk.gni")
  board = board_name
  if (board_name == "hispark_taurus" || board_name == "aegis_hi3516dv300") {
    board = "hi3516dv300"
  } else if (board_name == "hispark_aries") {
    board = "hi3518ev300"
  }

  if (ohos_build_compiler == "clang" && ohos_kernel_type == "liteos_a") {
    copy("display_layer") {
      sources = [ "${board}/liteos_a/lib/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board}/liteos_a/lib/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board}/liteos_a/lib/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  } else if (ohos_build_compiler == "clang" && ohos_kernel_type == "linux") {
    copy("display_layer") {
      sources = [ "${board}/linux_small/lib/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board}/linux_small/lib/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board}/linux_small/lib/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  }

  group("hdi_display") {
    deps = [
      ":display_gfx",
      ":display_gralloc",
      ":display_layer",
    ]
  }
} else {
  import("//build/ohos.gni")

  group("display_gralloc") {
    deps = [
      "//drivers/peripheral/display/hal/default_standard:def_display_gralloc",
    ]
    if (device_name == "hispark_phoenix") {
      deps += [ "source/display_gralloc:hisi_display_gralloc" ]
    }
  }

  group("display_device") {
    deps = [
      "//drivers/peripheral/display/hal/default_standard:def_display_device",
    ]
    if (device_name == "hispark_phoenix") {
      deps += [ "hi3751v350/linux_standard/adapter:display_adapter_impl" ]
    }
  }

  group("display_layer") {
    if (device_name == "hispark_phoenix") {
      deps = [ ":display_device" ]
    } else {
      deps = [ ":display_layer_lib" ]
    }
  }

  ohos_prebuilt_shared_library("display_gfx") {
    if (target_cpu == "arm") {
      source = "hi3516dv300/linux_standard/lib/libdisplay_gfx.z.so"
    } else {
      source = "hi3516dv300/linux_standard/lib64/libdisplay_gfx.z.so"
    }
    install_images = [ chipset_base_dir ]
    subsystem_name = "hdf"
    part_name = "drivers_peripheral_display"
  }

  ohos_prebuilt_shared_library("display_layer_lib") {
    if (target_cpu == "arm") {
      source = "hi3516dv300/linux_standard/lib/libdisplay_layer.z.so"
    } else {
      source = "hi3516dv300/linux_standard/lib64/libdisplay_layer.z.so"
    }
    install_images = [ chipset_base_dir ]
    subsystem_name = "hdf"
    part_name = "drivers_peripheral_display"
  }
}
