# Copyright (c) Hisilicon Technologies Co., Ltd. 2021-2021. All rights reserved.

import("//build/ohos.gni")

group("vendor_audio") {
  deps = [
    ":audio_primary_port",
    ":hal_common",
    ":hdi_audio",
  ]
}

board = "hi3516dv300"
if ("${product_name}" == "hispark_phoenix") {
  board = "hi3751v350"
}

ohos_prebuilt_shared_library("hdi_audio") {
  source = "${board}/linux_standard/libs/libhdi_audio.z.so"
  install_enable = true
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_audio"
}

ohos_prebuilt_shared_library("audio_primary_port") {
  source = "${board}/linux_standard/libs/libaudio_primary_port.so"
  install_enable = true
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_audio"
}

ohos_prebuilt_shared_library("hal_common") {
  source = "../common/${board}/linux_standard/libs/libmedia_hal_common.so"
  install_enable = true
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_audio"
}
