# Copyright (C) 2021 HiSilicon (Shanghai) Technologies CO., LIMITED.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

import("//drivers/hdf_core/adapter/khdf/liteos/hdf.gni")

module_switch = defined(LOSCFG_DRIVERS_HDF_WIFI)
module_name = "hdf_vendor_wifi"

HDM_WIFI_ROOT = "//drivers/hdf_core/framework/model/network/wifi"

hdf_driver(module_name) {
  sources = [ "adapter/hdf_wlan_sdio_adapt.c" ]
  include_dirs = [
    "$HDM_WIFI_ROOT/include",
    "$HDM_WIFI_ROOT/platform/include",
    "$HDM_WIFI_ROOT/core",
    "//drivers/peripheral/wlan/client/include",
    "driver/linuxkpi/include",
  ]
}
