# Copyright (C) 2024 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

static_library("posix") {
  sources = [
    "src/file.c",
    "src/libc.c",
    "src/pthread.c",
    "src/pthread_attr.c",
    "src/time.c",
  ]

  include_dirs = [ "include" ]
  defines = [
    "LIBC_VERSION_NUM=0x00010000",
    "LIBC_VERSION_STR=\"1.0.0-liteos_m\"",
  ]

  cflags = [ "-Werror" ]
}
