#===============================================================================
# @brief    cmake make file
# Copyright (c) 2020 HiSilicon (Shanghai) Technologies CO., LIMITED.
#===============================================================================
add_subdirectory(driver ${PROJECT_BINARY_DIR}/driver)
add_subdirectory(hal ${PROJECT_BINARY_DIR}/hal)